--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 djangorestframework = "^3.14.0"
 django = "^4.2.5"
 psycopg2 = "^2.9.7"
+pydantic = "^2.3"
+pydantic-settings = "^2.0.3"
 
 
 [build-system]
