--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,10 @@ services:
   web:
     build: .
     container_name: DJANGO_APP
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py makemigrations &&
+      python manage.py migrate &&
+      python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/medicalapp
     ports:
