--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ djangorestframework = "^3.14.0"
 django = "^4.2"
 pydantic = "^2.3"
 pydantic-settings = "^2.0.3"
-psycopg2-binary = "^2.9.7"
+djangorestframework-simplejwt = "^5.3.0"
 
 
 [build-system]
