--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^4.2"
 pydantic = {version = "^2.3", extras = ["email"]}
 pydantic-settings = "^2.0.3"
 djangorestframework-simplejwt = "^5.3.0"
+drf-yasg = "^1.21.7"
 
 
 [build-system]
