--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     command: >
       sh -c "python manage.py makemigrations &&
       python manage.py migrate &&
+      python manage.py createadmin &&
       python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/medicalapp
